styles/styles.css
/* ... */
i.symbol {
  display: inline-block;
  position: relative;
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

i.symbol::before,
i.symbol::after {
  content: '';
  position: absolute;
}

i.symbol.symbol-add,
i.symbol.symbol-subtract {
  width: 1rem;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before,
i.symbol.symbol-add::after {
  background-color: currentcolor;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before {
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%);
  height: var(--border-m);
}

i.symbol.symbol-add::after {
  top: 0;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: var(--border-m);
}

i.symbol.symbol-loading {
  border: var(--border-m) solid;
  border-radius: 50%;
}

i.symbol.symbol-loading::after {
  inset: calc(-1 * var(--border-m));
  border: inherit;
  border-right-color: var(--color-link);
  border-radius: inherit;
  animation: loading 1.5s ease-in-out infinite;
}

@keyframes loading {
  from {
    transform: rotate(0deg)
  }

  to {
    transform: rotate(360deg)
  }
}

/* typography */
h1,
h2,
h3,
h4,
h5,
h6 {
  scroll-margin: 1em;
  font-family: var(--heading-font-family);
  font-weight: var(--weight-extrabold);
  line-height: var(--line-height-s);
  text-transform: lowercase;
  margin: 0;
  overflow-wrap: break-word;
}

h1 {
  font-size: var(--heading-size-xxl);
}

h2 {
  font-size: var(--heading-size-xl);
}

h3 {
  font-size: var(--heading-size-l);
}

h4 {
  font-size: var(--heading-size-m);
}

h5 {
  font-size: var(--heading-size-s);
}

h6 {
  font-size: var(--heading-size-xs);
}

p,
ol,
ul,
dl,
pre,
blockquote {
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

pre,
code,
kbd,
samp,
var {
  font-family: var(--code-font-family);
  font-size: var(--body-size-m);
}

pre {
  border-radius: var(--rounding-l);
  padding: var(--spacing-m);
  background-color: var(--layer-depth);
  overflow-x: auto;
}

pre::-webkit-scrollbar {
  height: 24px;
}

pre::-webkit-scrollbar-thumb {
  background-color: var(--gray-500);
  border: 8px solid var(--layer-depth);
  border-radius: 12px;
}

pre::-webkit-scrollbar-thumb:hover {
  background-color: var(--gray-600);
}

code,
kbd,
samp,
var {
  border-radius: var(--rounding-s);
  padding: 0 0.25em;
  background-color: var(--layer-depth);
}

sup {
  font-family: var(--body-font-family);
  line-height: 0;
  vertical-align: 0.1em;
}

.detail {
  margin-top: 1.125em;
  margin-bottom: 0.25em;
  line-height: var(--line-height-m);
}

.label {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5ch;
  font-size: var(--heading-size-xxxl);
}

.label .icon img,
.label .icon svg {
  width: var(--heading-size-xxxxl);
  height: var(--heading-size-xxxxl);
  margin-bottom: 0.5ch;
}

@media (width >= 600px) {
  .label {
    flex-flow: row wrap;
    align-items: flex-end;
  }

  .label .icon img,
  .label .icon svg {
    margin-bottom: 0;
  }
}

/* links */
a:any-link {
  color: var(--color-link);
  text-decoration: none;
  transition: color 0.2s;
}

a:hover {
  color: var(--color-link-hover);
  text-decoration: underline;
}

a:focus {
  outline: var(--border-m) solid var(--color-link);
  outline-offset: var(--border-m);
}

/* buttons */
.button-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: var(--spacing-s);
}

a.button,
button.button {
  display: inline-block;
  border: var(--border-s) solid var(--color-link);
  border-radius: var(--rounding-m);
  padding: 0.4em 1.15em;
  background-color: var(--color-link);
  color: var(--color-background);
  font-size: inherit;
  font-weight: var(--weight-medium);
  text-align: center;
  transition: border-color 0.2s, background-color 0.2s, color 0.2s;
  cursor: pointer;
}

a.button:hover,
button.button:hover,
button.button:focus {
  border-color: var(--color-link-hover);
  background-color: var(--color-link-hover);
  color: var(--color-background);
  text-decoration: none;
}

button.button:disabled,
button.button:disabled:hover,
button.button:disabled:focus {
  border-color: var(--gray-100);
  background-color: var(--gray-100);
  color: var(--gray-400);
  cursor: not-allowed;
}

a.button.emphasis,
button.button.emphasis {
  padding-top: 0.5em;
  font-family: var(--heading-font-family);
}

a.button.emphasis:hover,
button.button.emphasis:hover,
button.button.emphasis:focus {
  border-color: var(--gray-900);
  background-color: var(--gray-900);
}

a.button.outline,
button.button.outline {
  border-color: var(--color-link);
  background-color: var(--color-background);
  color: var(--color-link);
}

a.button.outline:hover,
button.button.outline:hover,
button.button.outline:focus {
  border-color: var(--color-link-hover);
  background-color: var(--blue-100);
  color: var(--color-link-hover);
}

button.button.outline:disabled,
button.button.outline:disabled:hover,
button.button.outline:disabled:focus {
  border-color: var(--gray-100);
  background-color: var(--color-background);
  color: var(--gray-400);
}

a.button.accent,
button.button.accent {
  border-color: transparent;
  color: var(--color-text);
  background: var(--gradient);
}

a.button.accent:hover,
button.button.accent:hover,
button.button.accent:focus {
  color: var(--color-background);
}

a.button.ghost,
button.ghost {
  border-color: transparent;
  background-color: transparent;
  color: var(--color-text);
}

a.button.ghost:hover,
button.button.ghost:hover,
button.button.ghost:focus {
  border-color: var(--color-link-hover);
  background-color: var(--color-link-hover);
  color: var(--color-background);
}

/* form elements */
input,
textarea,
select,
button {
  max-width: 100%;
  font: inherit;
  transition: border-color 0.2s;
}

input,
textarea,
select {
  width: 100%;
  border: var(--border-m) solid var(--gray-300);
  border-radius: var(--rounding-m);
  padding: 0.4em 0.85em;
  color: var(--color-text);
}

button,
fieldset {
  appearance: none;
  margin: 0;
  border: 0;
  padding: 0;
  background-color: transparent;
}
/* ... */

